added project dates, modified README

--- a/_projects/2017-6-1-accion.md
+++ b/_projects/2017-6-1-accion.md
@@ -1,6 +1,6 @@
 ---
 title: Accion Systems
-description: Software Engineering Intenship
+description: Software Engineering Internship
 cover: /assets/images/portfolio/accion2.jpg
 key: accion
 ---
