--- a/_projects/2018-10-1-infolab.md
+++ b/_projects/2018-10-1-infolab.md
@@ -1,7 +1,7 @@
 ---
 title: Infolab Research
 description: MIT CSAIL
-cover: /assets/images/portfolio/dormspam0.png
+cover: /assets/images/portfolio/infolab1.png
 key: infolab
 ---
 
@@ -13,10 +13,10 @@ key: infolab
 <br>
 <h4>Current Research Work</h4>
 <p>My current research project focuses on using recently developed sequence models and other machine learning tools to improve the performance of question-answering systems, such as Infolab’s START system. Much of the information retrieved from knowledge bases such as Wikipedia can be stored in triples of the format (Subject, Relationship, Object).</p>
-<img class="img-fluid picture-small d-block mx-auto" src="img/portfolio/infolab3.jpg" alt="">
+<img class="img-fluid picture-small d-block mx-auto" src="/assets/images/portfolio/infolab3.jpg" alt="">
 <p> My task is to develop various sequence models to generate natural language questions given a triple of information i.e. (Obama, Spouse, Michelle) → “Obama’s wife is Michelle”. With these automatically generated questions, START will be able to better answer real human questions about these subjects. </p>
 <br>
 <p>I also built a web platform for creating written annotations for educational videos. These annotations are fed into START’s knowledge base, along with the transcript of the video, so that users are able to ask context questions about specific videos. The hope of this project is to apply automated question answering systems to MOOCs and educational platforms.</p>
 
-<img class="img-fluid d-block mx-auto" src="img/portfolio/infolab1.png" alt="">
-<img class="img-fluid d-block mx-auto" src="img/portfolio/infolab2.png" alt="">
+<img class="img-fluid d-block mx-auto" src="/assets/images/portfolio/infolab1.png" alt="">
+<img class="img-fluid d-block mx-auto" src="/assets/images/portfolio/infolab2.png" alt="">
