updated all the projects

--- a/_projects/2012-1-1-tacit.md
+++ b/_projects/2012-1-1-tacit.md
@@ -1,7 +1,20 @@
 ---
 key: tacit
-order: 0
 title: Tacit Glove
-description: Entrepreneurial Venture
-cover: /assets/images/portfolio/auxivision0.png
+description: Personal Project
+cover: /assets/images/portfolio/tacit0.png
 ---
+
+In 6th grade, a group of friends and I decided to create a “Tacit Glove” to help a blind student in our grade navigate the halls.
+
+![tacit0](/assets/images/portfolio/tacit0.png){:class="project-img"}
+
+The "Tacit Glove" was inspired by something we saw in an issue of MAKE magazine that we wanted to recreate. It's a device that is worn on the hand equipped with ultrasonic sensors in the front and motors in the back for haptic feedback when navigating an environment.
+
+![tacit2](/assets/images/portfolio/tacit2.jpg){:class="project-img"}
+
+We worked on it for a year and presented it to our blind friend. Though not a perfect solution, it was exciting to be able to create technology that could help make someone's life easier. This was my first real technology-related project, and it inspired me to pursue my passion for using technology to solve important problems.
+
+![tacit1](/assets/images/portfolio/tacit1.jpg){:class="project-img"}
+
+Later, we expanded the idea to using wearable technologies like Google Glass as a platform for helping the visually impaired navigate, leading me and my friends to found Auxivision. 
