--- a/_projects/2017-6-1-accion.md
+++ b/_projects/2017-6-1-accion.md
@@ -1,6 +1,18 @@
 ---
 title: Accion Systems
-description: Software Engineering Internship
+description: Summer 2017 Internship
 cover: /assets/images/portfolio/accion2.jpg
 key: accion
 ---
+
+I worked as a software engineering intern at Accion Systems during my high school junior summer. 
+
+[Accion Systems](https://www.accion-systems.com/) is a startup that produces ion thruster chip technology for micro-satellite propulsion. I was lucky enough to work as an intern here during my junior summer of high school.
+
+![accion](/assets/images/portfolio/accion1.png){:class="project-img"}
+
+The specifics of my project are under NDA, but as an overview, I helped Accion build low-level software that would allow them to reprogram their thruster chips floating in orbit from the ground. I also improved the custom data processing GUI they used to analyze testing data.
+
+During my internship, I had to learn a lot on the fly: microcontrollers, UART, assembly, as well as familiarizing myself with python scientific librares (numpy, pandas) and GUI libraries (tKinter)
+
+![accion](/assets/images/portfolio/accion2.jpg){:class="project-img"}
